change avatar style

--- a/style/taskcard.css
+++ b/style/taskcard.css
@@ -23,6 +23,14 @@
   height: 24px;
   border-radius: 50%;
   object-fit: cover;
+  background-color: var(--jp-brand-color1);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .jp-TaskCard-summary {
