--- a/style/taskboard.css
+++ b/style/taskboard.css
@@ -140,3 +140,19 @@
   min-height: 27px;
   border-bottom: var(--jp-border-width) solid var(--jp-border-color1);
 }
+
+.jp-TaskBoard-title-edit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 8px 0;
+}
+
+.jp-TaskBoard-title-edit input {
+  font-size: var(--jp-ui-font-size2);
+  font-weight: bold;
+  padding: 4px 8px;
+  text-align: center;
+  width: auto;
+  min-width: 200px;
+}
