--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,8 @@
 @import url('./base.css');
 @import url('./kanban-options.css');
-@import url('tasklist.css');
-@import url('taskboard.css');
-@import url('taskcard.css');
-@import url('taskcardeditor.css');
+@import url('./taskboard.css');
+@import url('./taskcard.css');
+@import url('./tasklist.css');
+@import url('./taskpanel.css');
+@import url('./taskcardeditor.css');
+@import url('./assigneeselector.css');
