add tag selector

--- a/style/index.css
+++ b/style/index.css
@@ -6,3 +6,4 @@
 @import url('./taskpanel.css');
 @import url('./taskcardeditor.css');
 @import url('./assigneeselector.css');
+@import url('./tagselector.css');
