--- a/style/tagselector.css
+++ b/style/tagselector.css
@@ -33,19 +33,25 @@
   left: 0;
   margin-top: 4px;
   background-color: var(--jp-layout-color1);
-  border: var(--jp-border-width) solid var(--jp-border-color1);
-  border-radius: var(--jp-border-radius);
+  border: 1px solid var(--jp-border-color1);
+  border-radius: 3px;
   box-shadow: var(--jp-elevation-z6);
   min-width: 200px;
-  z-index: 10000;
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1000;
+  overflow: hidden;
 }
 
 .jp-TagSelector-search-wrapper {
   position: relative;
-  padding: 12px;
+  padding: 8px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid var(--jp-border-color2);
+  flex: 0 0 auto;
 }
 
 .jp-TagSelector-searchIcon {
@@ -53,6 +59,7 @@
   left: 16px;
   width: 16px;
   height: 16px;
+  margin-right: 8px;
   color: var(--jp-ui-font-color2);
 }
 
@@ -60,13 +67,11 @@
   width: 100%;
   height: 24px;
   padding: 0 8px 0 28px;
-  color: var(--jp-ui-font-color0);
-  font-size: var(--jp-ui-font-size1);
-  line-height: 24px;
-  background-color: transparent;
   border: none;
-  border-bottom: 1px solid var(--jp-border-color2);
-  box-sizing: border-box;
+  outline: none;
+  background: transparent;
+  font-size: var(--jp-ui-font-size1);
+  color: var(--jp-ui-font-color0);
 }
 
 .jp-TagSelector-search:focus {
@@ -83,6 +88,8 @@
   overflow-y: auto;
   padding: 4px 0;
   border-top: var(--jp-border-width) solid var(--jp-border-color2);
+  flex: 1 1 auto;
+  min-height: 0;
 }
 
 .jp-TagSelector-item {
@@ -96,10 +103,6 @@
 
 .jp-TagSelector-item:hover {
   background-color: var(--jp-layout-color2);
-}
-
-.jp-TagSelector-item.jp-mod-selected {
-  color: var(--jp-ui-font-color1);
 }
 
 .jp-TagSelector-checkIcon {
